--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -4,6 +4,7 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
+  background-color: rgb(0, 0, 0);
 }
 
 .input {
@@ -12,6 +13,7 @@
   font-size: 18px;
   border: 1px solid #ddd;
   border-radius: 4px;
+  color: white;
 }
 
 .buttons {
